--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
     },
     "dependencies": {
         "rewire": "^6.0.0",
-        "validator": "^13.7.0"
+        "unix-timestamp-offset": "^1.3.2",
+        "validator": "^13.11.0"
     },
     "devDependencies": {
         "@babel/cli": "^7.22.5",
