--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
         "posttest": "npm run cleanup-sync-request || true"
     },
     "dependencies": {
+        "convert-array-to-csv": "^2.0.0",
         "cors": "^2.8.5",
         "express": "^4.18.0",
         "http-errors": "^2.0.0",
