--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,7 +7,7 @@ on:
     branches: [ "master", "main" ]
 
 jobs:
-  build:
+  build-and-test:
     runs-on: ubuntu-latest
 
     steps:
@@ -22,11 +22,14 @@ jobs:
       - name: Install dependencies
         run: npm install
 
-      - name: Lint
-        run: npm run lint
+      # If you have a build step (TypeScript -> JS), keep this:
+      # - name: Build
+      #   run: npm run build
+
+      - name: Start server
+        run: |
+          npm run dev &
+          sleep 5
 
       - name: Run tests
         run: npm test
-
-      - name: TypeScript build check
-        run: npm run build --if-present
