--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,7 +28,7 @@ jobs:
 
       - name: Start server
         run: |
-          npm start
+          npm start &
           sleep 5
 
       - name: Run tests
