--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,19 +1,18 @@
 {
   "compilerOptions": {
-    "esModuleInterop": true,
-    "noImplicitAny": true,
-    "noEmit": false,
+    "target": "ES2019",
+    "module": "commonjs",
     "outDir": "./dist",
+
+    "esModuleInterop": true,
     "resolveJsonModule": true,
-    "allowJs": true,
-    "target": "es2015",
-    "module": "commonjs"
+
+    "strict": true,
+    "noImplicitAny": true,
+
+    "allowJs": false,
+    "skipLibCheck": true
   },
-  "include": ["src/**/*"],
-  "exclude": [
-    "**/**_broken.ts",
-    "**/*.test.ts",
-    "node_modules",
-    "dist"
-  ]
+  "include": ["src"],
+  "exclude": ["node_modules", "dist"]
 }
