--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,18 +1,19 @@
 {
   "compilerOptions": {
-    "target": "ES2019",
+    "target": "es2015",
     "module": "commonjs",
     "outDir": "./dist",
-
     "esModuleInterop": true,
-    "resolveJsonModule": true,
-
-    "strict": true,
     "noImplicitAny": true,
-
-    "allowJs": false,
-    "skipLibCheck": true
+    "resolveJsonModule": true,
+    "allowJs": true,
+    "types": ["node"]
   },
   "include": ["src"],
-  "exclude": ["node_modules", "dist"]
+  "exclude": [
+    "node_modules",
+    "dist",
+    "src/**/*.test.ts",
+    "**/*.spec.ts"
+  ]
 }
