--- a/package.json
+++ b/package.json
@@ -1,52 +1,55 @@
 {
-    "scripts": {
-        "test": "jest",
-        "tsc": "tsc --project tsconfig.json",
-        "build": "tsc",
-        "start": "node dist/server.js",
-        "dev": "ts-node -T src/server.ts",
-        "lint": "eslint 'src/**/*.{ts,js}'",
-        "lint-fix": "eslint --fix 'src/**/*.{ts,js}'",
-        "ts-node-coverage": "nyc --reporter=text --reporter=lcov ts-node -T src/server.ts",
-        "cleanup-sync-request": "pkill -f node_modules/sync-rpc/lib/worker.js > /dev/null 2>&1",
-        "posttest": "npm run cleanup-sync-request || true"
-    },
-    "dependencies": {
-        "convert-array-to-csv": "^2.0.0",
-        "cors": "^2.8.5",
-        "express": "^4.18.0",
-        "http-errors": "^2.0.0",
-        "middleware-http-errors": "^0.1.1",
-        "morgan": "^1.10.0",
-        "rewire": "^6.0.0",
-        "ts-node": "^10.7.0",
-        "typescript": "^4.6.3",
-        "validator": "^13.7.0"
-    },
-    "devDependencies": {
-        "@types/cors": "^2.8.19",
-        "@types/express": "^4.17.25",
-        "@types/http-errors": "^2.0.5",
-        "@types/jest": "^27.5.0",
-        "@types/morgan": "^1.9.10",
-        "@types/node": "^20.3.1",
-        "@types/prompt-sync": "^4.1.1",
-        "@types/swagger-ui-express": "^4.1.8",
-        "@types/validator": "^13.15.10",
-        "@typescript-eslint/eslint-plugin": "^5.21.0",
-        "@typescript-eslint/parser": "^5.21.0",
-        "eslint": "^8.25.0",
-        "eslint-plugin-jest": "^26.1.5",
-        "jest": "^28.1.0",
-        "nyc": "^15.1.0",
-        "swagger-ui-express": "^4.6.3",
-        "sync-request-curl": "^2.2.0",
-        "ts-jest": "^28.0.2",
-        "yaml": "^2.8.2"
-    },
-    "nyc": {
-        "exclude": [
-            "echo.*"
-        ]
-    }
+  "scripts": {
+    "test": "jest",
+    "build": "tsc",
+    "start": "node dist/server.js",
+    "dev": "ts-node -T src/server.ts",
+    "lint": "eslint 'src/**/*.{ts,js}'",
+    "lint-fix": "eslint --fix 'src/**/*.{ts,js}'",
+    "cleanup-sync-request": "pkill -f node_modules/sync-rpc/lib/worker.js > /dev/null 2>&1",
+    "posttest": "npm run cleanup-sync-request || true"
+  },
+
+  "dependencies": {
+    "express": "^4.18.0",
+    "cors": "^2.8.5",
+    "morgan": "^1.10.0",
+    "validator": "^13.7.0",
+    "http-errors": "^2.0.0",
+    "middleware-http-errors": "^0.1.1",
+
+    "swagger-ui-express": "^4.6.3",
+    "sync-request-curl": "^2.2.0",
+    "yaml": "^2.8.2",
+
+    "typescript": "^4.6.3",
+    "ts-node": "^10.7.0",
+
+    "@types/express": "^4.17.25",
+    "@types/http-errors": "^2.0.5",
+    "@types/validator": "^13.15.10",
+    "@types/morgan": "^1.9.10",
+    "@types/cors": "^2.8.19",
+    "@types/swagger-ui-express": "^4.1.8",
+    "@types/node": "^20.3.1"
+  },
+
+  "devDependencies": {
+    "jest": "^28.1.3",
+    "ts-jest": "^28.0.8",
+    "@types/jest": "^27.5.2",
+
+    "eslint": "^8.57.1",
+    "@typescript-eslint/parser": "^5.21.0",
+    "@typescript-eslint/eslint-plugin": "^5.21.0",
+    "eslint-plugin-jest": "^26.9.0",
+
+    "nyc": "^15.1.0"
+  },
+
+  "nyc": {
+    "exclude": [
+      "echo.*"
+    ]
+  }
 }
