updated https protocol for deployed use

--- a/src/config.json
+++ b/src/config.json
@@ -1,5 +1,4 @@
 {
-    "url": "http://127.0.0.1",
-    "port": "49153",
+    "url": "https://toohak-backend.onrender.com",
     "expandDocs": false
 }
